--- a/BlazorApp1/appsettings.Development.json
+++ b/BlazorApp1/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Auth0": {
+    "Domain": "YOUR_AUTH0_DOMAIN",
+    "ClientId": "YOUR_AUTH0_CLIENT_ID",
+    "ClientSecret": "YOUR_AUTH0_CLIENT_SECRET"
   }
 }
